--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -3,8 +3,8 @@ version:             0.0.0.1
 synopsis:            A program that generates constructed languages
 description:         Please see README.txt
 homepage:            https://github.com/Brightgalrs/con-lang-gen
-license:             BSD3
-license-file:        Please see README.txt
+license:             MIT
+license-file:        README.txt
 author:              Robert D. Schultz Jr.
 maintainer:          chaosrobie@gmail.com
 copyright:           2016 Robert D. Schultz Jr.
@@ -15,8 +15,13 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Lib
+  exposed-modules:     PhonologyGen
+                     , ConsonantPhoneGen
+                     , PhonemeType
   build-depends:       base >= 4.7 && < 5
+                     , rvar -any
+                     , random-fu -any
+                     , random-extras -any
   default-language:    Haskell2010
 
 executable con-lang-gen-exe
@@ -25,6 +30,7 @@ executable con-lang-gen-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , con-lang-gen
+                     , random-fu
   default-language:    Haskell2010
 
 test-suite con-lang-gen-test
@@ -33,6 +39,7 @@ test-suite con-lang-gen-test
   main-is:             Spec.hs
   build-depends:       base
                      , con-lang-gen
+                     , random-fu
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
