--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -1,10 +1,10 @@
 name:                con-lang-gen
 version:             0.0.0.1
 synopsis:            A program that generates constructed languages
-description:         Please see README.txt
-homepage:            https://github.com/Brightgalrs/con-lang-gen
+description:         Please see README.md
+homepage:            https://github.com/Brightgalrs/con-lang-gen#readme
 license:             MIT
-license-file:        README.txt
+license-file:        LICENSE.md
 author:              Robert D. Schultz Jr.
 maintainer:          chaosrobie@gmail.com
 copyright:           2016 Robert D. Schultz Jr.
@@ -15,13 +15,16 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     XBar
-                     , XBarType
+  exposed-modules:     PhonemeInventoryGen
+                     , PhonemeType
+                     , PhonotacticsGen
   build-depends:       base >= 4.7 && < 5
                      , rvar -any
                      , random-fu -any
                      , random-extras -any
-                    , random-source
+                     , random-source
+                     , tuple
+                     , containers
   default-language:    Haskell2010
 
 executable con-lang-gen-exe
@@ -30,8 +33,11 @@ executable con-lang-gen-exe
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   build-depends:       base
                      , con-lang-gen
+                     , rvar
                      , random-fu
                      , random-source
+                     , tuple
+                     , containers
   default-language:    Haskell2010
 
 test-suite con-lang-gen-test
@@ -42,6 +48,8 @@ test-suite con-lang-gen-test
                      , con-lang-gen
                      , random-fu
                      , random-source
+                     , tuple
+                     , containers
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
