--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -49,6 +49,8 @@ library
                      , vector
                      , hashable
                      , directory
+                     , classy-prelude
+                     , text
   default-language:    Haskell2010
 
 executable con-lang-gen-exe
@@ -68,6 +70,8 @@ executable con-lang-gen-exe
                      , vector
                      , hashable
                      , directory
+                     , classy-prelude
+                     , text
   default-language:    Haskell2010
 
 source-repository head
