--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -2,7 +2,7 @@ name:                con-lang-gen
 version:             0.0.0.1
 synopsis:            A program that generates constructed languages
 description:         Please see README.md
-homepage:            https://github.com/Brightgalrs/con-lang-gen#readme
+homepage:            https://github.com/Brightgalrs/robert-d-schultz#readme
 license:             MIT
 license-file:        LICENSE.md
 author:              Robert D. Schultz Jr.
@@ -15,32 +15,15 @@ cabal-version:       >=1.10
 
 library
   hs-source-dirs:      src
-  exposed-modules:     Gen.Phonology
-                     , Data.Phoneme
-                     , Gen.Phonotactics
-                     , Gen.Word
-                     , Gen.Root
-                     , Data.Other
-                     , Gen.Inflection
-                     , Data.Inflection
-                     , Gen.Morphology
-                     , Gen.Grammar
-                     , Data.Grammar
-                     , Out.Sentence
-                     , Out.Roman
-                     , Out.Syllable
-                     , Out.Inflection
-                     , Out.Lexicon
-                     , Out.Phonology
-                     , Out.Other
-                     , Out.Grammar
-                     , Gen.ParseTree
+  exposed-modules:     Out.Language
                      , Gen.LanguageTree
-                     , LoadStuff
-  build-depends:       base >= 4.7 && < 5
-                     , rvar -any
-                     , random-fu -any
-                     , random-extras -any
+  -- ghc-options:         -Wall
+  default-extensions:  NoImplicitPrelude, OverloadedStrings
+  build-depends:       classy-prelude
+                     , base
+                     , rvar
+                     , random-fu
+                     , random-extras
                      , random-source
                      , tuple
                      , containers
@@ -49,7 +32,6 @@ library
                      , vector
                      , hashable
                      , directory
-                     , classy-prelude
                      , text
                      , safe
   default-language:    Haskell2010
@@ -58,11 +40,12 @@ executable con-lang-gen-exe
   hs-source-dirs:      app
   main-is:             Main.hs
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
-  build-depends:       base
+  build-depends:       classy-prelude
+                     , base
                      , con-lang-gen
                      , rvar
                      , random-fu
-                     , random-extras -any
+                     , random-extras
                      , random-source
                      , tuple
                      , containers
@@ -71,7 +54,6 @@ executable con-lang-gen-exe
                      , vector
                      , hashable
                      , directory
-                     , classy-prelude
                      , text
   default-language:    Haskell2010
 
