--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -68,6 +68,7 @@ library
                      , directory
                      , text
                      , safe
+                     , gamma
   default-language:    Haskell2010
 
 executable con-lang-gen-exe
@@ -90,6 +91,8 @@ executable con-lang-gen-exe
                      , hashable
                      , directory
                      , text
+                     , safe
+                     , gamma
   default-language:    Haskell2010
 
 source-repository head
