--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -52,8 +52,8 @@ library
                      , EnglishStuff
                      , Constants
 
-  -- ghc-options:         -Wall
-  default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase
+  ghc-options:         -Wpartial-fields
+  default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase, MultiWayIf
   build-depends:       classy-prelude >= 1.3.1
                      , base
                      , rvar
@@ -69,13 +69,13 @@ library
                      , directory
                      , text
                      , safe
-                     , text-format-simple
+                     , unordered-containers
   default-language:    Haskell2010
 
 executable con-lang-gen-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wpartial-fields
   default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase
   build-depends:       classy-prelude
                      , base
@@ -93,7 +93,7 @@ executable con-lang-gen-exe
                      , directory
                      , text
                      , safe
-                     , text-format-simple
+                     , unordered-containers
   default-language:    Haskell2010
 
 source-repository head
