--- a/con-lang-gen.cabal
+++ b/con-lang-gen.cabal
@@ -51,8 +51,9 @@ library
                      , HelperFunctions
                      , EnglishStuff
                      , Constants
+                     , Latex.Language
 
-  ghc-options:         -Wpartial-fields
+  ghc-options:
   default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase, MultiWayIf
   build-depends:       classy-prelude >= 1.3.1
                      , base
@@ -70,12 +71,13 @@ library
                      , text
                      , safe
                      , unordered-containers
+                     , HaTeX >= 3.19.0.0
   default-language:    Haskell2010
 
 executable con-lang-gen-exe
   hs-source-dirs:      app
   main-is:             Main.hs
-  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wpartial-fields
+  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase
   build-depends:       classy-prelude
                      , base
